# taiwan-flood-risk-open-map

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUCCESSION.md  docker-compose.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  main.py  placeholder_server.py
apps/api/tests/: README.md  test_admin_contract.py  test_config.py  test_db_pool.py  test_evidence_repository.py  test_geocoder_postgis_bootstrap.py  test_geocoding_normalization.py  test_geocoding_provider_chain.py  test_historical_flood_records.py  test_history_location_context.py  test_history_news_enrichment.py  test_local_source_action_plan.py  test_local_source_contract_probe.py  test_local_source_request_packets.py  test_local_source_signal_gap_evidence.py  test_main.py  test_nearby_realtime_coverage.py  test_official_disaster_points.py  test_profile_repository.py  test_public_contract.py  test_public_evidence_cache.py  test_public_freshness.py  test_public_geocode_cache.py  test_public_rate_limit.py  test_public_response_cache.py  test_public_risk_service.py  test_realtime_intensity.py  test_realtime_official_sources.py  test_reports_admin_governance_contract.py  test_reports_challenge.py  test_reports_contract.py  test_reports_repository.py  test_scoring.py  test_taiwan_wide_public_beta.py  test_tiles_contract.py
apps/workers/: README.md  pyproject.toml
apps/workers/app/: __init__.py  config.py  logging.py  main.py  metrics.py  scheduler.py
apps/workers/docs/: gdelt-controlled-backfill-approval-2026-05-07.md
apps/workers/scripts/: run_gdelt_backfill_shards.sh
apps/workers/tests/: README.md  test_adapter_contracts.py  test_adapter_registry_config.py  test_civil_iot_adapters.py  test_civil_iot_water_levels.py  test_cwa_rainfall_coverage.py  test_cwa_tide_level_adapter.py  test_evidence_retention.py  test_freshness_monitoring.py  test_gdelt_live_acceptance.py  (+38 more)
tmp/: README.md
(+579 files in other folders)
