[project]
name = "flood-risk-workers"
version = "0.0.0"
description = "Worker runtime skeleton for Flood Risk ingestion and scoring jobs."
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
